--- a/gallery-of-the-future/index.html
+++ b/gallery-of-the-future/index.html
@@ -88,7 +88,7 @@
 								<span class="subhead">System Failure. Please Restart</span></h2>
 								<p>Calling all artists: dismantle/reimagine an object or societal structure - for justice, for non-violence, for community!</p>
 								<br>
-								<p>Submission deadline: September 15th, 2020.<br>
+								<p>Submission deadline EXTENDED: October 5th, 2020.<br>
 									<a href="https://drive.google.com/file/d/15SQms9i_29oGGUJ32-udu2dCjdmTTkNk/view?usp=sharing" class="btn pink" target="_blank">Details</a><a class="btn pink" href="https://docs.google.com/forms/d/e/1FAIpQLScrXumhPFXDoejlO961lfxPnrK24MyZlpP8hPNAY4Qc0eRYqA/viewform?usp=sf_link" target="_blank">Sign Up</a> </p>
 								</div>
 							</section>
@@ -99,7 +99,7 @@
 								<h3>Gallery Prototype I: Summer/Fall 2020</h3>
 								<h4>Theme</h4>
 								<p>Our first gallery iteration is an "abandoned mall", created  through an experimental collaborative virtual creative jam.  From August 6, 2020 to September 1, 2020, we held a series of sprints and design-build sessions to brainstorm, experiment, prototype and create the first  Gallery of the Future.</p>
-								<p>The Gallery will  open to the public and for exhibitions on October 8, 2020.  Check back here for details and an invitation to our Launch Reception and the Opening for our first Exhibition.</p>
+								<p>The Gallery will  open to the public and for exhibitions on October 22nd, 2020.  Check back here for details and an invitation to our Launch Reception and the Opening for our first Exhibition.</p>
 								<br><br>
 								<h4>Sneak Preview of the Gallery:</h4>
 							</div>
