added links to galleries

--- a/gallery-of-the-future/index.html
+++ b/gallery-of-the-future/index.html
@@ -64,9 +64,10 @@
 									<p>October 23rd, 2020 - December 23rd, 2020<br>
 									<strong>Opening (virtual) Reception:</strong> Friday, October 23rd, 6PM PST</p>
 									<p><strong>Curators:</strong>  Marin Vesely, Scott Nieradka, Hilary Tsai, Jesse England</p>
-									<p>Join  42 artists as they dismantle, critique,  interpret, and reinvent the future through their chosen medium, to design for justice and  for community --to help us reimagine a more hopeful, equitable future.  </p>
-									<p><br>
-									Link to the gallery will be posted here the day of the show.</p>
+									<p>Join  42 artists as they dismantle, critique,  interpret, and reinvent the future through their chosen medium, to design for justice and  for community --to help us reimagine a more hopeful, equitable future.<br></p>
+									<p>
+										<a href="https://hubs.mozilla.com/kLEFNbf/system-failure-please-restart" class="btn pink" target="_blank">Enter The Mall</a>
+									</p>
 								</div>
 								<nav>
 									<ul class="subnav">
@@ -83,9 +84,12 @@
 							<div class="gallery-name">
 								<h3>Main Mall Hub</h3>
 								<h4>Architects:  Hilary Tsai, Marin Vesely</h4>
+								<p>
+										<a href="https://hubs.mozilla.com/kLEFNbf/system-failure-please-restart" class="btn" target="_blank">Enter The Mall</a>
+									</p>
 							</div>
 						</section>
-						<section class="light" id="projects">
+						<section class="light galleries-grid" id="projects">
 							<!-- main mall hub -->
 							<!-- <article class="proj-hover" id="rose">
 									<img src="images/projects/dangerousrose.png" alt="Work in Progress" class="image">
@@ -156,9 +160,11 @@
 							<div class="gallery-name">
 								<h3>Electronics Store</h3>
 								<h4>Architects:  Marin Vesely</h4>
+								<p><a href="https://hubs.mozilla.com/8qhewJG/electronics-store" class="btn" target="_blank">Enter Electronics Store</a></p>
+
 							</div>
 						</section>
-						<section class="light" id="projects">
+						<section class="light galleries-grid">
 							<article class="proj-hover">
 								<img src="images/projects/rochela.png" alt="João Rochela" class="image">
 								<div class="overlay modal-link">
@@ -261,9 +267,10 @@
 							<div class="gallery-name">
 								<h3>Ice Rink</h3>
 								<h4>Architects:  Hillary Tsai</h4>
+								<p><a href="https://hubs.mozilla.com/WpB9BkV/ice-skating-rink" class="btn" target="_blank">Enter the Ice Rink</a></p>
 							</div>
 						</section>
-						<section class="light" id="projects">
+						<section class="light galleries-grid">
 							<article class="proj-hover">
 								<img src="images/projects/tsai.png" alt="Hilary Tsai - Ice Scape" class="image">
 								<div class="overlay modal-link">
@@ -324,9 +331,10 @@
 							<div class="gallery-name">
 								<h3>Arcade Room</h3>
 								<h4>Architects:  Monica McGrane</h4>
+								<p><a href="https://hubs.mozilla.com/MGSadcw/arcade" class="btn" target="_blank">Enter Arcade</a></p>
 							</div>
 						</section>
-						<section class="light" id="projects">
+						<section class="light galleries-grid">
 							<article class="proj-hover" id="reeves">
 								<img src="images/projects/reeves.png" alt="Die with your soul in tact" class="image">
 								<div class="overlay modal-link">
@@ -371,9 +379,10 @@
 							<div class="gallery-name">
 								<h3>Parking Garage</h3>
 								<h4>Architects:  Shannon O'Brien</h4>
+								<p><a href="https://hubs.mozilla.com/hxug8nt/parking-garage" class="btn" target="_blank">Enter Parking Garage</a></p>
 							</div>
 						</section>
-						<section class="light" id="projects">
+						<section class="light galleries-grid">
 							<article class="proj-hover">
 								<img src="images/projects/heavers.png" alt="Mike Heavers" class="image">
 								<div class="overlay modal-link">
@@ -496,9 +505,10 @@
 							<div class="gallery-name">
 								<h3>Service Hallways</h3>
 								<h4>Architects:  Scott D. Nieradka</h4>
+								<p><a href="https://hubs.mozilla.com/LmeQvaN/service-hallways" class="btn" target="_blank">Enter Service Hallways</a></p>
 							</div>
 						</section>
-						<section class="light" id="projects">
+						<section class="light galleries-grid">
 							<article class="proj-hover">
 								<img src="images/projects/nieradka.png" alt="Scott D. Nieradka" class="image">
 								<div class="overlay modal-link">
