--- a/gallery-of-the-future/index.html
+++ b/gallery-of-the-future/index.html
@@ -65,6 +65,7 @@
 									<strong>Opening (virtual) Reception:</strong> Friday, October 23rd, 6PM PST</p>
 									<p><strong>Curators:</strong>  Marin Vesely, Scott Nieradka, Hilary Tsai, Jesse England</p>
 									<p>Join  42 artists as they dismantle, critique,  interpret, and reinvent the future through their chosen medium, to design for justice and  for community --to help us reimagine a more hopeful, equitable future.<br></p>
+									<p>New to Mozilla Hubs? <a href="https://www.youtube.com/watch?v=5QnOsyyebEQ" target="_blank">Watch this quick tutorial</a> on how to get around.
 									<p>
 										<a href="https://hubs.mozilla.com/kLEFNbf/system-failure-please-restart" class="btn pink" target="_blank">Enter The Mall</a>
 									</p>
@@ -312,7 +313,7 @@
 								</div>
 							</article>
 							<article class="proj-hover">
-								<img src="images/projects/navratil.jpeg" alt="Judit Navratil" class="image">
+								<img src="images/projects/navratil.png" alt="Judit Navratil" class="image">
 								<div class="overlay modal-link">
 									<div class="text">
 										Judit Navratil<br>
