added show catalog

--- a/gallery-of-the-future/index.html
+++ b/gallery-of-the-future/index.html
@@ -66,9 +66,9 @@
 									<p><strong>Curators:</strong>  Marin Vesely, Scott Nieradka, Hilary Tsai, Jesse England</p>
 									<p>Join  42 artists as they dismantle, critique,  interpret, and reinvent the future through their chosen medium, to design for justice and  for community --to help us reimagine a more hopeful, equitable future.<br></p>
 									<p>New to Mozilla Hubs? <a href="https://www.youtube.com/watch?v=5QnOsyyebEQ" target="_blank">Watch this quick tutorial</a> on how to get around.
-									<p>
+									<p class="flex">
 										<a href="https://hubs.mozilla.com/kLEFNbf/system-failure-please-restart" class="btn pink" target="_blank">Enter The Mall</a>
-									</p>
+									<a href="https://drive.google.com/file/d/1PfDZXZMta2foENuutjSSg62S4Y739Prq/view?usp=sharing" target="_blank" class="btn pink">View Show Catalog</a></p>
 								</div>
 								<nav>
 									<ul class="subnav">
