added link to hub

--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-5SR4C6X');</script>
+<!-- End Google Tag Manager -->
 		<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400|Source+Code+Pro:400,600,700&display=swap" rel="stylesheet">
 		<meta name="description" content="CETI offers a vision for lifelong learning, professional development, transformation. We support a diverse and inclusive community of professionals, educators, students, entrepreneurs, researchers, and practitioners to successfully engage with and create the future.">
 		<meta name="keywords" content="CETI, portland, oregon, professional education, research, innovation in creative,  emergent technology and design, workshops, participatory research projects, creative experiments, collaborative convenings, actions, and conversations, empower,inspire, diverse community, sectors, disciplines, experiences, create, imaginative, insightful, impactful responses, social challenges, environmental challenges, technological challenges">
@@ -70,9 +77,14 @@
 								<figure><img src="images/heros/gof1.png" alt="Gallery of the Future"></figure>
 								<div>
 									<h2>Gallery of the Future</h2>
-									<p>As the world is transformed by pandemics and revolutions, as physical spaces, access, and connection is lost, we reimagine the gallery spaces of the future.  What could it look like?  How can the art, the space, and the conversations and interactions critically engage with the world and with our communities?  How does it spark and sustain inspiration - with ideas, materials, and media? How does it reveal what is possible, and what needs to change?</p>
-									<p>We imagine an evolving space, changing in response to community needs and technology/media innovations.  A space created by artists, technologists, and communities together - a space to collaboratively experiment, learn, play, engage, and create.</p>
-									<a href="https://bit.ly/ceti-open-call-pdf" class="button pink" target="_blank">Open Call for Art</a> <a href="gallery-of-the-future/index.html" class="button pink">Find Out More</a>
+									<h3>System Failure.  Please Restart. </h3>
+									<p>October 23, 2020 - December 23, 2020<br>
+									Curators:  Marin Vesely, Scott Nieradka, Hilary Tsai, Jesse England</p>
+
+									<p>Join  42 artists as they dismantle, critique,  interpret, and reinvent the future through their chosen medium, to design for justice and  for community --to help us reimagine a more hopeful, equitable future. </p>
+
+									<a href="gallery-of-the-future/index.html" class="button pink">Read More</a>
+									<a href="https://hubs.mozilla.com/kLEFNbf/system-failure-please-restart" class="button pink" target="_blank">Enter the Gallery</a> 
 								</div>
 							</section>
 							<section class="wlf-link">
@@ -168,5 +180,9 @@
 						gtag('js', new Date());
 						gtag('config', 'G-CSLJ4LHBM2');
 						</script>
+						<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5SR4C6X"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 					</body>
 				</html>
