--- a/gallery-of-the-future/index.html
+++ b/gallery-of-the-future/index.html
@@ -627,7 +627,16 @@
 									</div>
 								</div>
 							</article>
+							
 						</section>
+						<section class="light">
+						<div class="container">
+								<p>If you are interested in hearing about more of our events, and projects, please sign up.<br><a href="#subscribe-form" class="btn">Newsletter Signup</a></p><br>
+
+<p>To support this project, collaborate with us on our spring exhibition or the next iteration of the gallery, or have questions or ideas for partnering, please reach out to  galleryofthefuture@ceti.institute</p>
+</div>
+</section>
+							
 						<br><br>
 						<!--  end of project gallery -->
 
@@ -722,6 +731,39 @@
 									</p>
 								</article>
 							</div>
+							<div id="subscribe-form" class="white-popup-block ">
+							<!-- Begin Mailchimp Signup Form -->
+							<link href="https://cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
+							<div id="mc_embed_signup">
+								<form action="https://institute.us15.list-manage.com/subscribe/post?u=01995859ca60a242158eb0eaf&amp;id=2404c39c03" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+									<div id="mc_embed_signup_scroll">
+										<h3>Please Subscribe!<br>
+										CETI institute newsletter</h3>
+										<div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+										<div class="mc-field-group">
+											<label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
+										</label>
+										<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+									</div>
+									<div class="mc-field-group">
+										<label for="mce-FNAME">First Name </label>
+										<input type="text" value="" name="FNAME" class="" id="mce-FNAME">
+									</div>
+									<div class="mc-field-group">
+										<label for="mce-LNAME">Last Name </label>
+										<input type="text" value="" name="LNAME" class="" id="mce-LNAME">
+									</div>
+									<div id="mce-responses" class="clear">
+										<div class="response" id="mce-error-response" style="display:none"></div>
+										<div class="response" id="mce-success-response" style="display:none"></div>
+										</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+										<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_01995859ca60a242158eb0eaf_2404c39c03" tabindex="-1" value=""></div>
+										<div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+									</div>
+								</form>
+							</div>
+							<!--End mc_embed_signup-->
+						</div>
 							<div>
 								<h3>Code of Conduct/Agreement</h3>
 								<p>All participants (including but not limited to organizers, donors, volunteers, recipients) in this project agree to abide by CETI’s <a href="https://docs.google.com/document/d/1JtNCIvxhhIJV5qav-BQsP0WRljAPQRi8vtfIENG9Bm8/edit?usp=sharing " target="_blank">Code of Conduct</a>.
