--- a/index.html
+++ b/index.html
@@ -134,13 +134,13 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 								<p>Please contact us at hello@ceti.institute with questions, with ideas for collaborations, or to support our work.</p>
 							</div>
 						</footer>
-						<div id="subscribe-form" class="white-popup-block mfp-hide">
+						<div id="subscribe-form" class="white-popup-block ">
 							<!-- Begin Mailchimp Signup Form -->
 							<link href="https://cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
 							<div id="mc_embed_signup">
 								<form action="https://institute.us15.list-manage.com/subscribe/post?u=01995859ca60a242158eb0eaf&amp;id=2404c39c03" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
 									<div id="mc_embed_signup_scroll">
-										<h2>Subscribe</h2>
+										<h2>Subscribe to the CETI institute newsletter</h2>
 										<div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
 										<div class="mc-field-group">
 											<label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
