added link to ceti

--- a/mozfest2021/index.html
+++ b/mozfest2021/index.html
@@ -39,7 +39,7 @@
 </head>
 <body>
 	<main>
-		<div><svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 400 320" enable-background="new 0 0 400 320" xml:space="preserve">
+		<div><a href="/index.html"><svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 400 320" enable-background="new 0 0 400 320" xml:space="preserve">
 					<g>
 						<path fill="#505555" d="M111.596,200.108c0-26.433,16.726-41.775,38.088-41.775c10.107,0,18.398,4.826,23.788,10.141
 							l-9.933,11.163c-3.807-3.522-8.097-5.717-13.855-5.717c-11.321,0-19.588,9.62-19.588,25.591c0,16.391,8.267,25.903,20.294,25.903
@@ -57,7 +57,7 @@
 									<path fill="#FFFFFF" d="M58.452,164.966h-0.204c-0.727,29.088-5.506,33.867-34.594,34.594v0.204
 										c29.088,0.726,33.867,5.506,34.594,34.594h0.204c0.727-29.088,5.506-33.867,34.594-34.594v-0.204
 										C63.958,198.833,59.179,194.053,58.452,164.966z"/>
-									</svg></div>
+									</svg></a></div>
 		<div><img src="../images/mozfest/mozfestlogo.jpg"></div>
 	</main>
 </body>
