added new design styles

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 				
 			</div>
 		</nav>
-		<div class="hero">
+		
 			<header class="branding">
 				<h1 id="logo">
 				<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 400 320" enable-background="new 0 0 400 320" xml:space="preserve">
@@ -64,11 +64,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 									<!-- This animation found on a codepen by Patrick Young https://codepen.io/ISOgenesis/pen/zxEXPg -->
 									</h1>
 								</header>
-							</div>
+							<div class="hero"></div>
 							<main>
 								<section class="about">
 									<div>
-										<h2>About CETI: A Creative and Emergent Technology Institute</h2>
+										<h2>A Creative and Emergent Technology Institute</h2>
 										<p>CETI offers a vision for an inclusive path of lifelong learning and professional development, supporting a diverse and interdisciplinary community of practitioners, professionals, educators, students, and researchers to successfully create the future. Through a carefully woven tapestry of workshops, institutes, participatory research, projects, convenings, and actions, we inspire our community to create imaginative and impactful responses to emergent social and technological challenges.</p>
 										<a class="button popup-with-form" href="#subscribe-form" data-effect="mfp-zoom-in">Join Our Mailing List</a>
 									</div>
