added mozfest action and reorged

--- a/device-sharing/get-involved.html
+++ b/device-sharing/get-involved.html
@@ -1,169 +1,112 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link
-        href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400|Source+Code+Pro:400,600,700&display=swap"
-        rel="stylesheet">
-    <meta name="description"
-        content="CETI offers a vision for lifelong learning, professional development, transformation. We support a diverse and inclusive community of professionals, educators, students, entrepreneurs, researchers, and practitioners to successfully engage with and create the future.">
-    <meta name="keywords"
-        content="CETI, portland, oregon, professional education, research, innovation in creative,  emergent technology and design, workshops, participatory research projects, creative experiments, collaborative convenings, actions, and conversations, empower,inspire, diverse community, sectors, disciplines, experiences, create, imaginative, insightful, impactful responses, social challenges, environmental challenges, technological challenges">
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400|Source+Code+Pro:400,600,700&display=swap" rel="stylesheet" />
+    <meta name="description" content="CETI offers a vision for lifelong learning, professional development, transformation. We support a diverse and inclusive community of professionals, educators, students, entrepreneurs, researchers, and practitioners to successfully engage with and create the future." />
+    <meta name="keywords" content="CETI, portland, oregon, professional education, research, innovation in creative,  emergent technology and design, workshops, participatory research projects, creative experiments, collaborative convenings, actions, and conversations, empower,inspire, diverse community, sectors, disciplines, experiences, create, imaginative, insightful, impactful responses, social challenges, environmental challenges, technological challenges" />
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <title>Ceti: A Creative and Emergent Technology Institute</title>
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="css/fcc.css">
-</head>
+    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="css/fcc.css" />
+  </head>
 
-<body class="device-page">
+  <body class="device-page">
+    <header class="branding">
+      <h1 id="logo">
+        <img src="/images/logos/ceti-logo.svg" alt="CETI" />
+      </h1>
+      <nav role="navigation" class="navtwo" id="topnavlist"></nav>
+      <nav role="navigation" class="navmobile" id="mobilenavlist"></nav>
+    </header>
+    <div class="hero">
+      <header class="branding">
+        <div>&nbsp;</div>
+        <img src="images/fcc-logo-white.png" alt="Fostering Connected Community Logo" class="fcc-logo" />
+      </header>
+    </div>
     <nav class="nav">
-        <div class="icon">
-            <div class="hamburger"></div>
-        </div>
-        <div class="menu-mobile">
-            <a href="/index.html">CETI Home</a>
-            <a href="/device-sharing/index.html" class="active">Device Sharing</a>
-            <a href="/device-sharing/get-involved.html">Get Involved</a>
-            <a href="/device-sharing/devices.html">Devices Needed</a>
-        </div>
+      <div class="icon">
+        <div class="hamburger"></div>
+      </div>
+      <div class="menu-mobile">
+        <a href="/index.html">CETI Home</a>
+        <a href="/device-sharing/index.html" class="active">Device Sharing</a>
+        <a href="/device-sharing/get-involved.html">Get Involved</a>
+        <a href="/device-sharing/devices.html">Devices Needed</a>
+      </div>
     </nav>
     <nav class="desktop">
-        <div class="menu-desktop">
-            <a href="/index.html">CETI Home</a>
-            <a href="/device-sharing/index.html" class="active">Device Sharing</a>
-            <a href="/device-sharing/get-involved.html">Get Involved</a>
-            <a href="/device-sharing/devices.html">Devices Needed</a>
-        </div>
+      <div class="menu-desktop">
+        <a href="/index.html">CETI Home</a>
+        <a href="/device-sharing/index.html" class="active">Device Sharing</a>
+        <a href="/device-sharing/get-involved.html">Get Involved</a>
+        <a href="/device-sharing/devices.html">Devices Needed</a>
+      </div>
     </nav>
-    <div class="hero">
-        <header class="branding">
-            <h1 id="logo">
-            <a href="/index.html">
-                <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 400 320" enable-background="new 0 0 400 320" xml:space="preserve">
-                    <g>
-                        <path fill="#505555" d="M111.596,200.108c0-26.433,16.726-41.775,38.088-41.775c10.107,0,18.398,4.826,23.788,10.141
-                            l-9.933,11.163c-3.807-3.522-8.097-5.717-13.855-5.717c-11.321,0-19.588,9.62-19.588,25.591c0,16.391,8.267,25.903,20.294,25.903
-                            c5.752,0,10.497-2.828,14.366-7.043l9.933,10.918C168.185,236.983,159.261,241,148.529,241
-                            C128.709,241,111.596,226.997,111.596,200.108z"/>
-                        <path fill="#505555" d="M187.224,159.802h52.851v15.131h-34.806v15.989h29.571v15.131h-29.571v18.349h36.029v15.131h-54.075
-                            L187.224,159.802L187.224,159.802z"/>
-                        <path fill="#505555" d="M274.564,174.932h-23.901v-15.131h65.847v15.131H292.61v64.599h-18.046V174.932z"/>
-                        <path fill="#505555" d="M326.904,224.401h18.619v-49.468h-18.619v-15.131h55.282v15.131h-18.619v49.468h18.619v15.131h-55.282
-                            L326.904,224.401L326.904,224.401z"/>
-                    </g>
-                    <path fill="#E5450A" d="M85.072,159.793H31.628c-7.261,0-13.147,5.886-13.147,13.147v53.444c0,7.261,5.886,13.147,13.147,13.147
-                        h53.444c7.261,0,13.147-5.886,13.147-13.147V172.94C98.218,165.678,92.333,159.793,85.072,159.793z M58.349,234.965
-                        c0-0.581-0.016-1.151-0.034-1.719h0.064C58.361,233.813,58.349,234.385,58.349,234.965z"/>
-                    <path fill="#FFFFFF" d="M58.452,164.966h-0.204c-0.727,29.088-5.506,33.867-34.594,34.594v0.204
-                        c29.088,0.726,33.867,5.506,34.594,34.594h0.204c0.727-29.088,5.506-33.867,34.594-34.594v-0.204
-                        C63.958,198.833,59.179,194.053,58.452,164.966z"/>
-                </svg>
-                </a>
-                <!-- This animation found on a codepen by Patrick Young https://codepen.io/ISOgenesis/pen/zxEXPg -->
-            </h1>
-            <img src="images/fcc-logo-white.png" alt="Fostering Connected Community Logo" class="fcc-logo"/>
-        </header>
-
-    </div>
-
     <main>
-
-        <section class="device-share1">
-            <div>
-                <h1>Fostering a Connected Community: Device Sharing for Digital Access</h1>
-                <h2>Get Involved</h2>
-                <h3>Who is this FCC: Device-Sharing Project for?</h3>
-                <p>The success of this project depends on creating a broad collaborative network of conors, recipients,
-                    volunteers, organisations, and community members. We’d be delighted to find ways for you to
-                    participate and help make this project inclusive and impactful.</p>
-                <details>
-                    <summary>
-                        <h3>
-                            Who Should Donate Devices?
-                        </h3>
-                    </summary>
-                    <p>Anybody who has spare devices (that meet the specs). And we’d be delighted if you can share the
-                        project and donation request with your neighbours/friends/family/colleagues.</p>
-                    <p>Perhaps you can even do an informal gathering of devices (from your block, community, or from
-                        coworkers). Please make sure to share/follow the data removal and prepping instructions. Either have
-                        each person fill out the donor form. if possible (or you can collect and fill one out for all).</p>
-                    <p><a href="https://forms.gle/ufVqkb9keLGSGxTG8" target='_blank' rel='noopener'>Sign up here to donate
-                            devices.</a> And Thank You so much!!</p>
-                    <p>We will have instructions to support the device prep and a few virtual office hrs to help you with
-                        questions and the process. Please send an email with and questions to <a
-                            href="mailto:hello@ceti.institute">hello@ceti.institute</a></p>
-                </details>
-                <details>
-                    <summary>
-                        <h3>Who are the Devices For? Who should make requests/help distribute?</h3>
-                    </summary>
-                    <p>We would like to support anybody who needs a device for education (educators and students and
-                        families), for accessing benefits, services and resources, for finding employment, for work, and
-                        perhaps to keep in touch with their families/caseworkers/health care providers/counselors/mentors.
-                        <em>Please request only one device per person that you will distribute to.</em></p>
-                    <p>You are welcome to request a device for yourself. Or perhaps you are a teacher who knows that
-                        students (current or former) or their families could use one. Or maybe you know people on your block
-                        or apt bldg or neighbourhood or /community group that needs one. Or maybe you are providing services
-                        or mentoring (health/counseling/legal/social) and know some people that you work with or provide
-                        services or resources to need a device. In which case, you may request devices (of the appropriate
-                        kind) for any of these people and commit to collecting and distributing them to those who
-                        need/requested one through you.</p>
-                    <p>We plan to have a few virtual office hrs to help with minimal troubleshooting to ensure the device
-                        works. And are happy to suggest other resources focussed on training. Send ? to <a
-                            href="mailto:hello@ceti.institute">hello@ceti.institute</a></p>
-                </details>
-                <details>
-                    <summary>
-                        <h3>Who Should Volunteer/Partner?</h3>
-                    </summary>
-                    <p>Anybody that cares about this issue and wants to help get devices into the hands of those who need
-                        it. We need help with logistics, with creating websites, with campaigns to get people to participate
-                        (and to tell stories about progress), to host drop-off pts, to help deliver/sort/pick-up/distribute
-                        devices, to help us find recipients and donors and to help compile results into a lovely
-                        report/story and to design a final process to create a decentralised network to share resources when
-                        needed.</p>
-                </details>
-                <details>
-                    <summary>
-                        <h3>Who Should Partner?</h3>
-                    </summary>
-                    <p>We need spaces to drop off and we’d love for local businesses/organisations to help us by hosting
-                        drop-off locations. And we need a host space to help us sort and prepare for distribution. </p>
-                    <p>To help provide spaces for drop-off/sorting, please contact hello@ceti.institute. With your name,
-                        email, phone and organisation name. We will follow-up to finalize logistics (time, days, process...)
-                    </p>
-                    <p>We would also appreciate any organisation that addresses this issue (of digital equity) to reach out
-                        if they’d like to find ways to partner on/support this project.</p>
-                    <p>We will add you all as a partner/sponsor to the project page.</p>
-                </details>
-                <details>
-                    <summary>
-                        <h3>Funding/Donations to Support the Project:</h3>
-                    </summary>
-                    <p>We would be grateful for any funding to support this project. CETI is a registered nonprofit
-                        501(c)(3) organisation and our EIN is 84-3427418. Contributions will be considered a charitable
-                        donation and all funds will be used for the purpose of this project. To help fund the project,
-                        please contact <a href="mailto:nandini@ceti.institute">nandini@ceti.institute</a>.</p>
-                    <p>All the funds will be used to purchase needed supplies and for logistics and implementation of the
-                        project.</p>
-                </details>
-            </div>
-        </section>
-
+      <section class="device-share1">
+        <div>
+          <h1>Fostering a Connected Community: Device Sharing for Digital Access</h1>
+          <h2>Get Involved</h2>
+          <h3>Who is this FCC: Device-Sharing Project for?</h3>
+          <p>The success of this project depends on creating a broad collaborative network of conors, recipients, volunteers, organisations, and community members. We’d be delighted to find ways for you to participate and help make this project inclusive and impactful.</p>
+          <details>
+            <summary>
+              <h3>Who Should Donate Devices?</h3>
+            </summary>
+            <p>Anybody who has spare devices (that meet the specs). And we’d be delighted if you can share the project and donation request with your neighbours/friends/family/colleagues.</p>
+            <p>Perhaps you can even do an informal gathering of devices (from your block, community, or from coworkers). Please make sure to share/follow the data removal and prepping instructions. Either have each person fill out the donor form. if possible (or you can collect and fill one out for all).</p>
+            <p><a href="https://forms.gle/ufVqkb9keLGSGxTG8" target="_blank" rel="noopener">Sign up here to donate devices.</a> And Thank You so much!!</p>
+            <p>We will have instructions to support the device prep and a few virtual office hrs to help you with questions and the process. Please send an email with and questions to <a href="mailto:hello@ceti.institute">hello@ceti.institute</a></p>
+          </details>
+          <details>
+            <summary>
+              <h3>Who are the Devices For? Who should make requests/help distribute?</h3>
+            </summary>
+            <p>We would like to support anybody who needs a device for education (educators and students and families), for accessing benefits, services and resources, for finding employment, for work, and perhaps to keep in touch with their families/caseworkers/health care providers/counselors/mentors. <em>Please request only one device per person that you will distribute to.</em></p>
+            <p>You are welcome to request a device for yourself. Or perhaps you are a teacher who knows that students (current or former) or their families could use one. Or maybe you know people on your block or apt bldg or neighbourhood or /community group that needs one. Or maybe you are providing services or mentoring (health/counseling/legal/social) and know some people that you work with or provide services or resources to need a device. In which case, you may request devices (of the appropriate kind) for any of these people and commit to collecting and distributing them to those who need/requested one through you.</p>
+            <p>We plan to have a few virtual office hrs to help with minimal troubleshooting to ensure the device works. And are happy to suggest other resources focussed on training. Send ? to <a href="mailto:hello@ceti.institute">hello@ceti.institute</a></p>
+          </details>
+          <details>
+            <summary>
+              <h3>Who Should Volunteer/Partner?</h3>
+            </summary>
+            <p>Anybody that cares about this issue and wants to help get devices into the hands of those who need it. We need help with logistics, with creating websites, with campaigns to get people to participate (and to tell stories about progress), to host drop-off pts, to help deliver/sort/pick-up/distribute devices, to help us find recipients and donors and to help compile results into a lovely report/story and to design a final process to create a decentralised network to share resources when needed.</p>
+          </details>
+          <details>
+            <summary>
+              <h3>Who Should Partner?</h3>
+            </summary>
+            <p>We need spaces to drop off and we’d love for local businesses/organisations to help us by hosting drop-off locations. And we need a host space to help us sort and prepare for distribution.</p>
+            <p>To help provide spaces for drop-off/sorting, please contact hello@ceti.institute. With your name, email, phone and organisation name. We will follow-up to finalize logistics (time, days, process...)</p>
+            <p>We would also appreciate any organisation that addresses this issue (of digital equity) to reach out if they’d like to find ways to partner on/support this project.</p>
+            <p>We will add you all as a partner/sponsor to the project page.</p>
+          </details>
+          <details>
+            <summary>
+              <h3>Funding/Donations to Support the Project:</h3>
+            </summary>
+            <p>We would be grateful for any funding to support this project. CETI is a registered nonprofit 501(c)(3) organisation and our EIN is 84-3427418. Contributions will be considered a charitable donation and all funds will be used for the purpose of this project. To help fund the project, please contact <a href="mailto:nandini@ceti.institute">nandini@ceti.institute</a>.</p>
+            <p>All the funds will be used to purchase needed supplies and for logistics and implementation of the project.</p>
+          </details>
+        </div>
+      </section>
     </main>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<script src="js/device-sharing.js"></script>
-<!-- Global site tag (gtag.js) - Google Analytics -->
+    <script src="/js/script.js"></script>
+    <script src="js/device-sharing.js"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-CSLJ4LHBM2"></script>
     <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
-        gtag('config', 'G-CSLJ4LHBM2');
+      window.dataLayer = window.dataLayer || []
+      function gtag() {
+        dataLayer.push(arguments)
+      }
+      gtag("js", new Date())
+      gtag("config", "G-CSLJ4LHBM2")
     </script>
-</body>
-
+  </body>
 </html>
