--- a/device-sharing/index.html
+++ b/device-sharing/index.html
@@ -1,152 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400|Source+Code+Pro:400,600,700&display=swap" rel="stylesheet" />
+    <meta name="description" content="CETI offers a vision for lifelong learning, professional development, transformation. We support a diverse and inclusive community of professionals, educators, students, entrepreneurs, researchers, and practitioners to successfully engage with and create the future." />
+    <meta name="keywords" content="CETI, portland, oregon, professional education, research, innovation in creative,  emergent technology and design, workshops, participatory research projects, creative experiments, collaborative convenings, actions, and conversations, empower,inspire, diverse community, sectors, disciplines, experiences, create, imaginative, insightful, impactful responses, social challenges, environmental challenges, technological challenges" />
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+    <title>Ceti: A Creative and Emergent Technology Institute</title>
+    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="css/fcc.css" />
+  </head>
 
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link
-		href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400|Source+Code+Pro:400,600,700&display=swap"
-		rel="stylesheet">
-	<meta name="description"
-		content="CETI offers a vision for lifelong learning, professional development, transformation. We support a diverse and inclusive community of professionals, educators, students, entrepreneurs, researchers, and practitioners to successfully engage with and create the future.">
-	<meta name="keywords"
-		content="CETI, portland, oregon, professional education, research, innovation in creative,  emergent technology and design, workshops, participatory research projects, creative experiments, collaborative convenings, actions, and conversations, empower,inspire, diverse community, sectors, disciplines, experiences, create, imaginative, insightful, impactful responses, social challenges, environmental challenges, technological challenges">
-	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-	<link rel="icon" href="/favicon.ico" type="image/x-icon">
-	<title>Ceti: A Creative and Emergent Technology Institute</title>
-	<link rel="stylesheet" href="../css/style.css">
-	<link rel="stylesheet" href="css/fcc.css">
-</head>
+  <body class="device-page">
+    <header class="branding">
+      <h1 id="logo">
+        <img src="/images/logos/ceti-logo.svg" alt="CETI" />
+      </h1>
+      <nav role="navigation" class="navtwo" id="topnavlist"></nav>
+      <nav role="navigation" class="navmobile" id="mobilenavlist"></nav>
+    </header>
+    <div class="hero">
+      <header class="branding">
+        <div>&nbsp;</div>
+        <img src="images/fcc-logo-white.png" alt="Fostering Connected Community Logo" class="fcc-logo" />
+      </header>
+    </div>
 
-<body class="device-page">
-	<nav class="nav">
-		<div class="icon">
-			<div class="hamburger"></div>
-		</div>
-		<div class="menu-mobile">
-			<a href="/index.html">CETI Home</a>
-			<a href="/device-sharing/index.html" class="active">Device Sharing</a>
-			<a href="/device-sharing/get-involved.html">Get Involved</a>
-			<a href="/device-sharing/devices.html">Devices Needed</a>
-		</div>
-	</nav>
-	<nav class="desktop">
-		<div class="menu-desktop">
-			<a href="/index.html">CETI Home</a>
-			<a href="/device-sharing/index.html" class="active">Device Sharing</a>
-			<a href="/device-sharing/get-involved.html">Get Involved</a>
-			<a href="/device-sharing/devices.html">Devices Needed</a>
-		</div>
-	</nav>
-	<div class="hero">
-		<header class="branding">
-			<h1 id="logo">
-				<a href="/index.html">
-					<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 400 320" enable-background="new 0 0 400 320" xml:space="preserve">
-					<g>
-						<path fill="#505555" d="M111.596,200.108c0-26.433,16.726-41.775,38.088-41.775c10.107,0,18.398,4.826,23.788,10.141
-							l-9.933,11.163c-3.807-3.522-8.097-5.717-13.855-5.717c-11.321,0-19.588,9.62-19.588,25.591c0,16.391,8.267,25.903,20.294,25.903
-							c5.752,0,10.497-2.828,14.366-7.043l9.933,10.918C168.185,236.983,159.261,241,148.529,241
-							C128.709,241,111.596,226.997,111.596,200.108z"/>
-						<path fill="#505555" d="M187.224,159.802h52.851v15.131h-34.806v15.989h29.571v15.131h-29.571v18.349h36.029v15.131h-54.075
-							L187.224,159.802L187.224,159.802z"/>
-						<path fill="#505555" d="M274.564,174.932h-23.901v-15.131h65.847v15.131H292.61v64.599h-18.046V174.932z"/>
-						<path fill="#505555" d="M326.904,224.401h18.619v-49.468h-18.619v-15.131h55.282v15.131h-18.619v49.468h18.619v15.131h-55.282
-							L326.904,224.401L326.904,224.401z"/>
-					</g>
-					<path fill="#E5450A" d="M85.072,159.793H31.628c-7.261,0-13.147,5.886-13.147,13.147v53.444c0,7.261,5.886,13.147,13.147,13.147
-						h53.444c7.261,0,13.147-5.886,13.147-13.147V172.94C98.218,165.678,92.333,159.793,85.072,159.793z M58.349,234.965
-						c0-0.581-0.016-1.151-0.034-1.719h0.064C58.361,233.813,58.349,234.385,58.349,234.965z"/>
-					<path fill="#FFFFFF" d="M58.452,164.966h-0.204c-0.727,29.088-5.506,33.867-34.594,34.594v0.204
-						c29.088,0.726,33.867,5.506,34.594,34.594h0.204c0.727-29.088,5.506-33.867,34.594-34.594v-0.204
-						C63.958,198.833,59.179,194.053,58.452,164.966z"/>
-				</svg>
-				</a>
-				<!-- This animation found on a codepen by Patrick Young https://codepen.io/ISOgenesis/pen/zxEXPg -->
-			</h1>
-			<img src="images/fcc-logo-white.png" alt="Fostering Connected Community Logo" class="fcc-logo"/>
-		</header>
-
-	</div>
-
-
-
-	<main>
-
-		<section class="device-share1">
-			<div>
-				<h1>Fostering a Connected Community: Device Sharing for Digital Access</h1>
-				<h2>Goal: To ensure that every member of our community in the region has the devices needed to access
-					the internet.</h2>
-				<h2>Plan: To encourage and enable informal donations of personal spare devices to those who need it by creating a network and process for sharing.</h2>
-				<!-- <p>In the 21st Century, access to the internet and the devices to use it are essential for survival and success. The recent crisis has highlighted the disproportionate impact of the existing digital inequity on our marginalized and vulnerable populations, and the urgent need for a remedy.</p>
+    <main>
+      <nav class="nav">
+        <div class="icon">
+          <div class="hamburger"></div>
+        </div>
+        <div class="menu-mobile">
+          <a href="/index.html">CETI Home</a>
+          <a href="/device-sharing/index.html" class="active">Device Sharing</a>
+          <a href="/device-sharing/get-involved.html">Get Involved</a>
+          <a href="/device-sharing/devices.html">Devices Needed</a>
+        </div>
+      </nav>
+      <nav class="desktop">
+        <div class="menu-desktop">
+          <a href="/index.html">CETI Home</a>
+          <a href="/device-sharing/index.html" class="active">Device Sharing</a>
+          <a href="/device-sharing/get-involved.html">Get Involved</a>
+          <a href="/device-sharing/devices.html">Devices Needed</a>
+        </div>
+      </nav>
+      <section class="device-share1">
+        <div>
+          <h1>Fostering a Connected Community: Device Sharing for Digital Access</h1>
+          <h2>Goal: To ensure that every member of our community in the region has the devices needed to access the internet.</h2>
+          <h2>Plan: To encourage and enable informal donations of personal spare devices to those who need it by creating a network and process for sharing.</h2>
+          <!-- <p>In the 21st Century, access to the internet and the devices to use it are essential for survival and success. The recent crisis has highlighted the disproportionate impact of the existing digital inequity on our marginalized and vulnerable populations, and the urgent need for a remedy.</p>
 
 				<p>We also live in a region with a thriving collaborative and creative community in technology, design, and innovation. We’d like to leverage that by creating an informal process and network to donate/share our spare functioning devices. We will be quick and scrappy - getting these devices into the hands of those who need it as quickly as possible. We need your participation to ensure the project is impactful and inclusive.
 				</p> -->
-			</div>
-		</section>
-		<section class="device-share2">
-			<div>
-				<h2>How to get involved</h2>
-				<p>
-					<a href="get-involved.html">Here are some ways</a> you can participate in and support the project.
-					And we’re open to
-					suggestions and new ideas so please let us know how else you might contribute.
-				</p>
-				<p>
-					We’d be delighted to have you join in whatever capacity that you can. To participate, please fill
-					out the forms below:
-				</p>
-				<ul>
-					<li><a href="https://forms.gle/GZeWGpe8moZp48688" target='_blank' rel='noopener'>as a
-							volunteer/organizer</a></li>
-					<li><a href="https://forms.gle/ufVqkb9keLGSGxTG8" target='_blank' rel='noopener'>to donate
-							devices</a></li>
-					<li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfVqtBoPquVchfqs-HWl2PjTcuUjYCp6w9ZzD-vsF7TNyA2Fw/viewform"
-							target='_blank' rel='noopener'>to request devices</a></li>
-				</ul>
+        </div>
+      </section>
+      <section class="device-share2">
+        <div>
+          <h2>How to get involved</h2>
+          <p><a href="get-involved.html">Here are some ways</a> you can participate in and support the project. And we’re open to suggestions and new ideas so please let us know how else you might contribute.</p>
+          <p>We’d be delighted to have you join in whatever capacity that you can. To participate, please fill out the forms below:</p>
+          <ul>
+            <li><a href="https://forms.gle/GZeWGpe8moZp48688" target="_blank" rel="noopener">as a volunteer/organizer</a></li>
+            <li><a href="https://forms.gle/ufVqkb9keLGSGxTG8" target="_blank" rel="noopener">to donate devices</a></li>
+            <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfVqtBoPquVchfqs-HWl2PjTcuUjYCp6w9ZzD-vsF7TNyA2Fw/viewform" target="_blank" rel="noopener">to request devices</a></li>
+          </ul>
 
-				<p>Please review the <a href="devices.html">types/specs of devices that we need/will collect.</a></p>
+          <p>Please review the <a href="devices.html">types/specs of devices that we need/will collect.</a></p>
 
-				<p>In the process, we will also help save the devices from a landfill, and from gathering dust in our
-					spaces. And we will have collectively helped in some small way to mitigate the impacts of this
-					crisis on our community.</p>
-			</div>
-		</section>
-		<section class="device-share1">
-			<div>
-				<h2>Questions? </h2>
-				<p>Contact <a href="mailto:hello@ceti.institute?subject=device sharing">hello@ceti.institute</a></p>
+          <p>In the process, we will also help save the devices from a landfill, and from gathering dust in our spaces. And we will have collectively helped in some small way to mitigate the impacts of this crisis on our community.</p>
+        </div>
+      </section>
+      <section class="device-share1">
+        <div>
+          <h2>Questions?</h2>
+          <p>Contact <a href="mailto:hello@ceti.institute?subject=device sharing">hello@ceti.institute</a></p>
 
-				<h3>Donations of Funds: </h3>
-				<p>We would be grateful for any contributions to support the project --- for needed materials and
-					logistics. CETI is a registered nonprofit 501(c)(3) organisation (ein - 84-3427418) and
-					contributions to this project qualify as a tax-deductible charitable donation. Please contact <a
-						href="mailto:nandini@ceti.institute">nandini@ceti.institute</a> for more details.
-				</p>
+          <h3>Donations of Funds:</h3>
+          <p>We would be grateful for any contributions to support the project --- for needed materials and logistics. CETI is a registered nonprofit 501(c)(3) organisation (ein - 84-3427418) and contributions to this project qualify as a tax-deductible charitable donation. Please contact <a href="mailto:nandini@ceti.institute">nandini@ceti.institute</a> for more details.</p>
 
-				<h3>Partners and Sponsors</h3>
-				<p>Coming soon</p>
+          <h3>Partners and Sponsors</h3>
+          <p>Coming soon</p>
 
-				<h3>Code of Conduct/Agreement: </h3>
-				<p>All participants (including but not limited to organizers, donors, volunteers, recipients), ... in
-					this project agree to abide by CETI’s Code of Conduct as well as the Contract/Agreement for
-					Participants.</p>
-			</div>
+          <h3>Code of Conduct/Agreement:</h3>
+          <p>All participants (including but not limited to organizers, donors, volunteers, recipients), ... in this project agree to abide by CETI’s Code of Conduct as well as the Contract/Agreement for Participants.</p>
+        </div>
+      </section>
+    </main>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="/js/script.js"></script>
+    <script src="js/device-sharing.js"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-CSLJ4LHBM2"></script>
+    <script>
+      window.dataLayer = window.dataLayer || []
+      function gtag() {
+        dataLayer.push(arguments)
+      }
+      gtag("js", new Date())
 
-		</section>
-	</main>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<script src="js/device-sharing.js"></script>
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=G-CSLJ4LHBM2"></script>
-	<script>
-		window.dataLayer = window.dataLayer || [];
-		function gtag() { dataLayer.push(arguments); }
-		gtag('js', new Date());
-
-		gtag('config', 'G-CSLJ4LHBM2');
-	</script>
-</body>
-
+      gtag("config", "G-CSLJ4LHBM2")
+    </script>
+  </body>
 </html>
