--- a/mozfest2021/index.html
+++ b/mozfest2021/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@400;600;700&family=Source+Sans+Pro:wght@400;700&display=swap" rel="preload" as="style" />
 
-    <link rel="stylesheet" href="/gallery-of-the-future/style.css" />
+    <link rel="stylesheet" href="/css/style-two-oh.css" />
     <meta property="og:title" content="Ceti Institute" />
     <meta property="og:description" content="CETI Institute offers a vision for lifelong learning, professional development, transformation. We support a diverse and inclusive community of professionals, educators, students, entrepreneurs, researchers, and practitioners to successfully engage with and create the future." />
     <meta property="og:image" content="http://ceti.institute/images/brand/ceti_logo-orange.png" />
@@ -17,162 +17,30 @@
     <meta property="og:site_name" content="CETI Institute" />
     <meta name="twitter:image:alt" content="CETI Institute" />
     <meta name="twitter:site" content="@ceti_institute" />
-    <!-- <style>
-      * {
-        box-sizing: border-box;
-      }
-      main {
-        display: flex;
-        width: 60%;
-        margin: 120px auto;
-      }
-      main div {
-        padding: 40px;
-      }
-      img {
-        width: 100%;
-      }
-      svg {
-        width: 100%;
-      }
-      main div:nth-child(odd) {
-        flex: 60%;
-      }
-      main div:nth-child(even) {
-        flex: 40%;
-        display: flex;
-        align-items: center;
-        margin-top: 60px;
-      }
-      @media only screen and (max-width: 1024px) {
-        main div:nth-child(even) {
-          margin-top: 40px;
-        }
-      }
-      @media only screen and (max-width: 768px) {
-        main {
-          flex-direction: column;
-        }
-      }
-    </style> -->
   </head>
 
   <body id="gof-page" class="subpage mozfest">
-    <header>
-      <div class="logo">
-        <a href="../index.html">
-          <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 400 320" enable-background="new 0 0 400 320" xml:space="preserve">
-            <g>
-              <path
-                fill="#505555"
-                d="M111.596,200.108c0-26.433,16.726-41.775,38.088-41.775c10.107,0,18.398,4.826,23.788,10.141
-								l-9.933,11.163c-3.807-3.522-8.097-5.717-13.855-5.717c-11.321,0-19.588,9.62-19.588,25.591c0,16.391,8.267,25.903,20.294,25.903
-								c5.752,0,10.497-2.828,14.366-7.043l9.933,10.918C168.185,236.983,159.261,241,148.529,241
-								C128.709,241,111.596,226.997,111.596,200.108z"
-              />
-              <path
-                fill="#505555"
-                d="M187.224,159.802h52.851v15.131h-34.806v15.989h29.571v15.131h-29.571v18.349h36.029v15.131h-54.075
-									L187.224,159.802L187.224,159.802z"
-              />
-              <path fill="#505555" d="M274.564,174.932h-23.901v-15.131h65.847v15.131H292.61v64.599h-18.046V174.932z" />
-              <path
-                fill="#505555"
-                d="M326.904,224.401h18.619v-49.468h-18.619v-15.131h55.282v15.131h-18.619v49.468h18.619v15.131h-55.282
-										L326.904,224.401L326.904,224.401z"
-              />
-            </g>
-            <path
-              fill="#E5450A"
-              d="M85.072,159.793H31.628c-7.261,0-13.147,5.886-13.147,13.147v53.444c0,7.261,5.886,13.147,13.147,13.147
-										h53.444c7.261,0,13.147-5.886,13.147-13.147V172.94C98.218,165.678,92.333,159.793,85.072,159.793z M58.349,234.965
-										c0-0.581-0.016-1.151-0.034-1.719h0.064C58.361,233.813,58.349,234.385,58.349,234.965z"
-            />
-            <path
-              fill="#FFFFFF"
-              d="M58.452,164.966h-0.204c-0.727,29.088-5.506,33.867-34.594,34.594v0.204
-											c29.088,0.726,33.867,5.506,34.594,34.594h0.204c0.727-29.088,5.506-33.867,34.594-34.594v-0.204
-											C63.958,198.833,59.179,194.053,58.452,164.966z"
-            />
-          </svg>
-        </a>
-      </div>
-      <nav class="nav">
-        <div class="icon">
-          <div class="hamburger">Projects</div>
-        </div>
-        <div class="menu-mobile">
-          <a href="index.html" disabled>Gallery of the Future</a>
-          <a href="../wlf2020/index.html">Winter Lights Festival</a>
-          <a href="../device-sharing/index.html">Device Sharing</a>
-        </div>
-      </nav>
+    <header class="branding">
+      <h1 id="logo">
+        <a href="/index.html"><img src="/images/logos/ceti-logo.svg" alt="CETI" /></a>
+      </h1>
+      <nav role="navigation" class="navtwo" id="topnavlist"></nav>
+      <nav role="navigation" class="mobilenav" id="mobilenavlist"></nav>
     </header>
-
     <main>
       <section class="light" id="intro">
         <figure><img src="/images/heros/mozfest1.png" alt="Gallery of the Future" /></figure>
         <div>
           <h1>System Failure. Please Restart.</h1>
           <h3>Featured at Virtual MozFest 2021</h3>
-          <p style="margin: 40px"><img class="mozlogo" src="../images/mozfest/mozfestlogo.jpg" /></p>
           <p>
-            Begins March 8th, 2021<br />
-            <a href="https://hubs.mozilla.com/kLEFNbf/system-failure-please-restart" class="btn" target="_blank">Enter the Virtual Gallery</a><a href="https://drive.google.com/file/d/1PfDZXZMta2foENuutjSSg62S4Y739Prq/view?usp=sharing" target="_blank" class="btn">View Show Catalog</a>
+            March 8th, 2021 - March 19th, 2021<br />
+            <a href="https://drive.google.com/file/d/1uP_adxi5uzbAFM-oB2Qao0p8BMjGue5y/view?usp=sharing" target="_blank" class="btn">Catalog</a><a href="https://hubs.mozilla.com/kLEFNbf/system-failure-please-restart" class="btn" target="_blank">Enter the Gallery</a>
           </p>
-          <p><strong>Curators:</strong> Marin Vesely, Scott Nieradka, Hilary Tsai, Jesse England</p>
-          <p>Join 42 artists as they dismantle, critique, interpret, and reinvent the future through their chosen medium, to design for justice and for community --to help us reimagine a more hopeful, equitable future.<br /></p>
+
           <p><strong>New to Mozilla Hubs?</strong> <a href="https://www.youtube.com/watch?v=5QnOsyyebEQ" target="_blank">Watch this quick tutorial</a> on how to get around. Or read Marin's <a href="https://docs.google.com/document/d/1A4BO7XTzqp6d2Km2GYxO6Z0m-Zxrgtmazthv8AAeQy0/edit?usp=sharing">Tips for Using Mozilla Hubs</a></p>
         </div>
       </section>
-      <section class="gof" id="intro">
-        <nav>
-          <ul class="subnav">
-            <li><a href="/gallery-of-the-future/index.html#galleries">Galleries</a></li>
-            <li><a href="/gallery-of-the-future/index.html#prototype1">Prototype 1</a></li>
-            <li><a href="/gallery-of-the-future/index.html#participants">Participants</a></li>
-          </ul>
-        </nav>
-      </section>
-
-      <div>
-        <a href="/index.html"
-          ><svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 400 320" enable-background="new 0 0 400 320" xml:space="preserve">
-            <g>
-              <path
-                fill="#505555"
-                d="M111.596,200.108c0-26.433,16.726-41.775,38.088-41.775c10.107,0,18.398,4.826,23.788,10.141
-							l-9.933,11.163c-3.807-3.522-8.097-5.717-13.855-5.717c-11.321,0-19.588,9.62-19.588,25.591c0,16.391,8.267,25.903,20.294,25.903
-							c5.752,0,10.497-2.828,14.366-7.043l9.933,10.918C168.185,236.983,159.261,241,148.529,241
-							C128.709,241,111.596,226.997,111.596,200.108z"
-              />
-              <path
-                fill="#505555"
-                d="M187.224,159.802h52.851v15.131h-34.806v15.989h29.571v15.131h-29.571v18.349h36.029v15.131h-54.075
-								L187.224,159.802L187.224,159.802z"
-              />
-              <path fill="#505555" d="M274.564,174.932h-23.901v-15.131h65.847v15.131H292.61v64.599h-18.046V174.932z" />
-              <path
-                fill="#505555"
-                d="M326.904,224.401h18.619v-49.468h-18.619v-15.131h55.282v15.131h-18.619v49.468h18.619v15.131h-55.282
-									L326.904,224.401L326.904,224.401z"
-              />
-            </g>
-            <path
-              fill="#E5450A"
-              d="M85.072,159.793H31.628c-7.261,0-13.147,5.886-13.147,13.147v53.444c0,7.261,5.886,13.147,13.147,13.147
-									h53.444c7.261,0,13.147-5.886,13.147-13.147V172.94C98.218,165.678,92.333,159.793,85.072,159.793z M58.349,234.965
-									c0-0.581-0.016-1.151-0.034-1.719h0.064C58.361,233.813,58.349,234.385,58.349,234.965z"
-            />
-            <path
-              fill="#FFFFFF"
-              d="M58.452,164.966h-0.204c-0.727,29.088-5.506,33.867-34.594,34.594v0.204
-										c29.088,0.726,33.867,5.506,34.594,34.594h0.204c0.727-29.088,5.506-33.867,34.594-34.594v-0.204
-										C63.958,198.833,59.179,194.053,58.452,164.966z"
-            /></svg
-        ></a>
-      </div>
-      <div><img src="../images/mozfest/mozfestlogo.jpg" /></div>
     </main>
     <footer id="contact">
       <div>
@@ -191,24 +59,9 @@
       </div>
     </footer>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="slick/slick.min.js"></script>
-    <script src="js/nav.js"></script>
-    <script src="js/script.js"></script>
-    <!-- mailchimp -->
-    <script type="text/javascript" src="https://s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script>
-    <script type="text/javascript">
-      ;(function ($) {
-        window.fnames = new Array()
-        window.ftypes = new Array()
-        fnames[0] = "EMAIL"
-        ftypes[0] = "email"
-        fnames[1] = "FNAME"
-        ftypes[1] = "text"
-        fnames[2] = "LNAME"
-        ftypes[2] = "text"
-      })(jQuery)
-      var $mcj = jQuery.noConflict(true)
-    </script>
+    <script type="text/javascript" src="/libraries/slick/slick.min.js"></script>
+    <script src="/js/script.js"></script>
+
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-CSLJ4LHBM2"></script>
     <script>
