removed link to hubs

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 									<p>Join  42 artists as they dismantle, critique,  interpret, and reinvent the future through their chosen medium, to design for justice and  for community --to help us reimagine a more hopeful, equitable future. </p>
 
 									<a href="gallery-of-the-future/index.html" class="button pink">Read More</a>
-									<a href="https://hubs.mozilla.com/kLEFNbf/system-failure-please-restart" class="button pink" target="_blank">Enter the Gallery</a> 
+									<!-- <a href="https://hubs.mozilla.com/kLEFNbf/system-failure-please-restart" class="button pink" target="_blank">Enter the Gallery</a>  -->
 								</div>
 							</section>
 							<section class="wlf-link">
