added year to constellations

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 									<h3>Ceti Art+Tech Experiments at the 2020 Portland Winter Light Festival</h3>
 									<a href="wlf2020/index.html"><img src=""></a>
 									<p>We are a <a style="color:white;" href="https://www.pdxwlf.com/out-and-about" target="_blank">Portland Winter Light Festival</a> Affiliate Site. Join us on February 8th, 5pm - 10pm at The Riveter, KEX Hotel, and 11:11 supply and check our over 20 collaborative projects.</p>
-									<a href="wlf2020/index.html" class="button">Info and Registration</a>
+									<a href="wlf2020/index.html" class="button">Info</a>
 								</div>
 								<!-- <div class="cta">
 									<h3>Join us</h3>
