added mozfest how to get around list

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 						<ul>
 							<li><a href="/gallery-of-the-future/">Gallery of the Future</a></li>
 							<li><a href="/device-sharing">Device Sharing</a></li>
+							<li><a href="/wlf2020">Winter Light Fesrtival</a></li>
 						</ul>
 					</li>
 					<li><a href="/newsletter">Newsletter</a></li>
@@ -45,6 +46,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 				<strong><a href="#">Projects</a></strong>
 					<a href="/gallery-of-the-future/">Gallery of the Future</a>
 					<a href="/device-sharing">Device Sharing</a>
+					<a href="/wlf2020">Winter Light Fesrtival</a>
 					<strong><a href="/newsletter">Newsletter Signup</a></strong>
 				</div>
 				</nav>
