--- a/mozfest2021/index.html
+++ b/mozfest2021/index.html
@@ -33,12 +33,20 @@
         <div>
           <h1>System Failure. Please Restart.</h1>
           <h3>Featured at Virtual MozFest 2021</h3>
-          <p>
-            March 8th, 2021 - March 19th, 2021<br />
-            <a href="https://drive.google.com/file/d/1uP_adxi5uzbAFM-oB2Qao0p8BMjGue5y/view?usp=sharing" target="_blank" class="btn">Catalog</a><a href="https://hubs.mozilla.com/kLEFNbf/system-failure-please-restart" class="btn" target="_blank">Enter the Gallery</a>
-          </p>
+          <p>March 8th, 2021 - March 19th, 2021<br /></p>
+          <h4>How to Get Around in Mozilla Hubs</h4>
+          <ul class="get-around">
+            <li><strong>W</strong> &amp; <strong>S</strong> keys move forward-back</li>
+            <li><strong>A</strong> &amp; <strong>D</strong> keys move left-right</li>
+            <li><strong>Q</strong> &amp; <strong>E</strong> keys or cursor for rotation</li>
+            <li>holding <strong>SHIFT</strong> key makes you move faster</li>
+            <li>holding down <strong>SPACEBAR</strong> will show you teleportation spots in some rooms</li>
+            <li>Press <strong>G</strong> key to enable fly mode, then point up and go forward using W or arrow key.</li>
+            <li><strong>New to Mozilla Hubs?</strong> <a href="https://www.youtube.com/watch?v=5QnOsyyebEQ" target="_blank">Watch this quick tutorial</a> on how to get around or read Marin's <a href="https://docs.google.com/document/d/1A4BO7XTzqp6d2Km2GYxO6Z0m-Zxrgtmazthv8AAeQy0/edit?usp=sharing" target="_blank">Tips for Using Mozilla Hubs</a></li>
+          </ul>
 
-          <p><strong>New to Mozilla Hubs?</strong> <a href="https://www.youtube.com/watch?v=5QnOsyyebEQ" target="_blank">Watch this quick tutorial</a> on how to get around. Or read Marin's <a href="https://docs.google.com/document/d/1A4BO7XTzqp6d2Km2GYxO6Z0m-Zxrgtmazthv8AAeQy0/edit?usp=sharing">Tips for Using Mozilla Hubs</a></p>
+          <p><a href="https://drive.google.com/file/d/1uP_adxi5uzbAFM-oB2Qao0p8BMjGue5y/view?usp=sharing" target="_blank" class="btn">Catalog</a><a href="https://hubs.mozilla.com/kLEFNbf/system-failure-please-restart" class="btn" target="_blank">Enter the Gallery</a></p>
+          <p><strong>Warning:</strong> Mature Content and language<br /></p>
         </div>
       </section>
     </main>
