--- a/mozfest2021/index.html
+++ b/mozfest2021/index.html
@@ -17,9 +17,26 @@
     <meta property="og:site_name" content="CETI Institute" />
     <meta name="twitter:image:alt" content="CETI Institute" />
     <meta name="twitter:site" content="@ceti_institute" />
+    <!-- Google Tag Manager -->
+    <script>
+      ;(function (w, d, s, l, i) {
+        w[l] = w[l] || []
+        w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" })
+        var f = d.getElementsByTagName(s)[0],
+          j = d.createElement(s),
+          dl = l != "dataLayer" ? "&l=" + l : ""
+        j.async = true
+        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl
+        f.parentNode.insertBefore(j, f)
+      })(window, document, "script", "dataLayer", "GTM-5SR4C6X")
+    </script>
+    <!-- End Google Tag Manager -->
   </head>
 
   <body id="gof-page" class="subpage mozfest">
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5SR4C6X" height="0" width="0" style="display: none; visibility: hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <header class="branding">
       <h1 id="logo">
         <a href="/index.html"><img src="/images/logos/ceti-logo.svg" alt="CETI" /></a>
