--- a/mozfest2021/index.html
+++ b/mozfest2021/index.html
@@ -63,7 +63,7 @@
           </ul>
 
           <p><a href="https://drive.google.com/file/d/1uP_adxi5uzbAFM-oB2Qao0p8BMjGue5y/view?usp=sharing" target="_blank" class="btn">Catalog</a><a href="https://hubs.mozilla.com/kLEFNbf/system-failure-please-restart" class="btn" target="_blank">Enter the Gallery</a></p>
-          <p><strong>Warning:</strong> Mature Content and language<br /></p>
+          <p><span class="warning">Warning:</span> some of the works in the exhibition may contain content and language that are perhaps disturbing or inappropriate for certain audiences.<br /></p>
         </div>
       </section>
     </main>
